--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,13 @@
   --bg-cl-clients-filter-btn: #f4f4fd;
   --accent-bg-cl-clients-filter-btn: #404bbf;
 
+  --bg-cl-features-icon-container: #f4f4fd;
+
+  --bg-cl-social-list-link: #4d5ae5;
+  --accent-bg-cl-social-list-link: #404bbf;
+
   /* Others */
+  --fill-social-list-icon: #f4f4fd;
   --cl-border-header: #e7e9fc;
   --box-shadow-hero-modal-btn: rgba(0, 0, 0, 0.15);
   --indent: 24px;
@@ -47,16 +53,20 @@
   --items: 4;
 }
 
-.projects-list-item {
+.projects-list {
   --items: 3;
 }
 
-.team-list-item {
+.team-list {
   --items: 4;
 }
 
-.client-list-item {
+.client-list {
   --items: 9;
+}
+
+.customers-list {
+  --items: 6;
 }
 
 h1,
@@ -139,6 +149,9 @@ body {
 }
 
 .section {
+  width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -149,6 +162,9 @@ body {
 
 .page-header {
   border-bottom: 1px solid var(--cl-border-header);
+  width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -197,9 +213,6 @@ body {
   color: var(--accent-cl-link);
 }
 
-.address {
-  font-style: normal;
-}
 .contact-link {
   font-weight: 400;
   font-size: 16px;
@@ -221,9 +234,15 @@ body {
 
 .hero {
   background-color: var(--bg-cl-hero);
-}
-
-.hero {
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(..//images/hero/hero-img.jpg);
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
 }
@@ -244,8 +263,6 @@ body {
 .hero-modal-btn {
   border: none;
   display: block;
-  min-width: 169px;
-  min-height: 56px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 14px;
@@ -261,7 +278,6 @@ body {
   letter-spacing: 0.04em;
   color: var(--hero-txt-color);
   background-color: var(--bg-cl-hero-btn);
-  cursor: pointer;
 }
 .hero-modal-btn:hover,
 .hero-modal-btn:focus {
@@ -271,6 +287,15 @@ body {
 /* ============================== /Hero ============================== */
 
 /* ============================== Features ============================== */
+
+.features-icon-container {
+  padding-top: 24px;
+  padding-right: 100px;
+  padding-bottom: 24px;
+  padding-left: 100px;
+  background-color: var(--bg-cl-features-icon-container);
+  margin-bottom: 8px;
+}
 
 .features-list {
   display: flex;
@@ -318,9 +343,7 @@ body {
 }
 
 .projects-list-item {
-  flex-basis: calc(
-    (100% - var(var(--indent)) * (var(--items) - 1)) / var(--items)
-  );
+  flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
 }
 
 /* ============================== /Projects ============================== */
@@ -379,15 +402,93 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-bottom: 8px;
+}
+
+.social-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-list-icon {
+  fill: var(--fill-social-list-icon);
+}
+
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--bg-cl-social-list-link);
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: var(--accent-bg-cl-social-list-link);
 }
 
 /* ============================== /Team ============================== */
 
+/* ============================== Customers ============================== */
+
+.customers {
+  width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.customers-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--secondary-txt-cl);
+  margin-bottom: 72px;
+}
+
+.customers-list {
+  display: flex;
+  gap: var(--indent);
+}
+
+.customers-list-item {
+  flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items));
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  height: 88px;
+}
+
+.customers-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.customers-list-link:hover .customers-list-icon,
+.customers-list-lin:focus .customers-list-icon {
+  fill: #404bbf;
+}
+
+.customers-list-icon {
+  fill: #8e8f99;
+}
+
+/* ============================== /Customers ============================== */
+
 /* ============================== Portfolio clients ============================== */
 
 .clients {
+  width: 1440px;
   padding-top: 96px;
   padding-bottom: 120px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .clients-filter-list {
@@ -405,7 +506,7 @@ body {
 }
 
 .client-list-item {
-  flex-basis: calc(100% - var(--indent) * (var(--items) - 1)) / 4;
+  flex-basis: calc(100% - var(--indent) * (var(--items) - 1)) / 3;
 }
 
 .clients-filter-btn {
@@ -422,9 +523,6 @@ body {
   letter-spacing: 0.04em;
   background-color: var(--bg-cl-clients-filter-btn);
   color: var(--cl-clients-filter-btn);
-  cursor: pointer;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   border: 1px solid #e7e9fc;
 }
@@ -433,6 +531,8 @@ body {
   background-color: var(--accent-bg-cl-clients-filter-btn);
   color: var(--accent-cl-clients-filter-btn);
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .client-list-title {
   margin-bottom: 8px;
@@ -459,11 +559,21 @@ body {
   border-top: none;
 }
 
+.client-list-link:hover,
+.client-list-link:focus {
+  border: 1px solid #f4f4fd;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 /* ============================== /Portfolio clients ============================== */
 
 /* ============================== Footer ============================== */
 
 .footer {
+  width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -480,7 +590,7 @@ body {
   background-color: var(--bg-cl-footer);
 }
 .footer-description {
-  max-width: 264px;
+  width: 264px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -488,4 +598,48 @@ body {
   color: var(--cl-desc-footer);
 }
 
+.social-media-list {
+  display: flex;
+  gap: 16px;
+}
+
+.social-meadia-item {
+  width: 40px;
+  height: 40px;
+}
+.social-media-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+
+.social-media-icon {
+  fill: #f4f4fd;
+}
+
+.social-media-link:hover,
+.social-media-link:focus {
+  background-color: #31d0aa;
+}
+
+.social-media-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.footer-container {
+  display: flex;
+}
+
+.footer-info {
+  margin-right: 120px;
+}
 /* ============================== /Footer ============================== */
