--- a/css/styles.css
+++ b/css/styles.css
@@ -46,27 +46,31 @@
   --fill-social-list-icon: #f4f4fd;
   --cl-border-header: #e7e9fc;
   --box-shadow-hero-modal-btn: rgba(0, 0, 0, 0.15);
-  --indent: 24px;
 }
 
 .features-list {
   --items: 4;
+  --indent: 24px;
 }
 
 .projects-list {
   --items: 3;
+  --indent: 24px;
 }
 
 .team-list {
   --items: 4;
+  --indent: 24px;
 }
 
 .client-list {
   --items: 9;
+  --indent-column: 24px;
 }
 
 .customers-list {
   --items: 6;
+  --indent: 24px;
 }
 
 h1,
@@ -161,12 +165,12 @@ body {
 /* ============================== Header ============================== */
 
 .page-header {
-  border-bottom: 1px solid var(--cl-border-header);
   width: 1440px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 24px;
   padding-bottom: 24px;
+  border-bottom: 1px solid var(--cl-border-header);
 }
 
 .page-header-container {
@@ -338,7 +342,6 @@ body {
 
 .projects-list {
   display: flex;
-  flex-wrap: wrap;
   gap: var(--indent);
 }
 
@@ -367,7 +370,6 @@ body {
 
 .team-list {
   display: flex;
-  flex-wrap: wrap;
   gap: var(--indent);
 }
 
@@ -502,11 +504,11 @@ body {
   display: flex;
   flex-wrap: wrap;
   row-gap: 48px;
-  column-gap: 24px;
+  column-gap: var(--indent-column);
 }
 
 .client-list-item {
-  flex-basis: calc(100% - var(--indent) * (var(--items) - 1)) / 3;
+  flex-basis: calc((100% - var(--indent-column) * 2) / 3);
 }
 
 .clients-filter-btn {
@@ -557,6 +559,10 @@ body {
   padding-left: 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+}
+
+.client-list-link {
+  display: block;
 }
 
 .client-list-link:hover,
