--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@
 
   --cl-desc-footer: #f4f4fd;
 
+  --cl-customers-list-link: #8e8f99;
+
   /* Bg-colors */
   --bg-cl-bady: #ffffff;
 
@@ -171,6 +173,8 @@ body {
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid var(--cl-border-header);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .page-header-container {
@@ -246,9 +250,11 @@ body {
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
-  width: 1440px;
+  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .hero-title {
@@ -383,9 +389,9 @@ body {
 
 .card-team-content {
   padding-top: 32px;
-  padding-right: 16px;
+  /* padding-right: 16px; */
   padding-bottom: 32px;
-  padding-left: 16px;
+  /* padding-left: 16px; */
 }
 
 .team-list-title {
@@ -409,7 +415,8 @@ body {
 
 .social-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 24px;
 }
 
 .social-list-icon {
@@ -444,7 +451,7 @@ body {
 .customers-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.1;
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
@@ -470,6 +477,14 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  color: var(--cl-customers-list-link);
+}
+
+.customers-list-link:hover,
+.customers-list-link:focus {
+  border-color: #404bbf;
 }
 
 .customers-list-link:hover .customers-list-icon,
@@ -478,7 +493,7 @@ body {
 }
 
 .customers-list-icon {
-  fill: #8e8f99;
+  fill: currentColor;
 }
 
 /* ============================== /Customers ============================== */
@@ -643,6 +658,7 @@ body {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-info {
