--- a/css/styles.css
+++ b/css/styles.css
@@ -473,9 +473,8 @@ body {
 }
 
 .customers-list-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
+  padding: 16px 32px;
   width: 100%;
   height: 100%;
   border: 1px solid #8e8f99;
