--- a/css/styles.css
+++ b/css/styles.css
@@ -473,8 +473,9 @@ body {
 }
 
 .customers-list-link {
-  display: block;
-  padding: 16px 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   border: 1px solid #8e8f99;
