--- a/css/styles.css
+++ b/css/styles.css
@@ -468,8 +468,8 @@ body {
 .customers-list-item {
   /* flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items)); */
   flex-basis: calc((100% - 5 * 24px) / 6);
-  border: 1px solid #8e8f99;
-  border-radius: 4px;
+  /* border: 1px solid #8e8f99;
+  border-radius: 4px; */
   height: 88px;
 }
 
