--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,10 @@
   --indent-column: 24px;
 }
 
+.clients-filter-list {
+  --indent: 24px;
+}
+
 /* .customers-list {
   --items: 6;
   --indent: 24px;
@@ -155,9 +159,9 @@ body {
 }
 
 .section {
-  width: 1440px;
+  /* width: 1440px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -167,9 +171,9 @@ body {
 /* ============================== Header ============================== */
 
 .page-header {
-  width: 1440px;
+  /* width: 1440px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid var(--cl-border-header);
@@ -336,6 +340,10 @@ body {
 
 /* ============================== Projects ============================== */
 
+.projects {
+  padding-bottom: 120px;
+}
+
 .projects-title {
   margin-bottom: 72px;
   font-weight: 700;
@@ -443,11 +451,11 @@ body {
 
 /* ============================== Customers ============================== */
 
-.customers {
+/* .customers {
   width: 1440px;
   margin-left: auto;
   margin-right: auto;
-}
+} */
 
 .customers-title {
   font-weight: 700;
@@ -466,10 +474,7 @@ body {
 }
 
 .customers-list-item {
-  /* flex-basis: calc((100% - var(--indent) * (var(--items) - 1)) / var(--items)); */
   flex-basis: calc((100% - 5 * 24px) / 6);
-  /* border: 1px solid #8e8f99;
-  border-radius: 4px; */
   height: 88px;
 }
 
@@ -504,11 +509,11 @@ body {
 /* ============================== Portfolio clients ============================== */
 
 .clients {
-  width: 1440px;
+  /* width: 1440px; */
   padding-top: 96px;
   padding-bottom: 120px;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 
 .clients-filter-list {
@@ -595,9 +600,9 @@ body {
 /* ============================== Footer ============================== */
 
 .footer {
-  width: 1440px;
+  /* width: 1440px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
   padding-top: 100px;
   padding-bottom: 100px;
 }
