--- a/css/styles.css
+++ b/css/styles.css
@@ -590,7 +590,7 @@ body {
 
 .client-list-link:hover,
 .client-list-link:focus {
-  border: 1px solid #f4f4fd;
+  /* border: 1px solid #f4f4fd; */
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
